# ligmg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: FindLAPACKE.cmake  FindPETSc.cmake  FindSLEPc.cmake  LIGMGConfig.cmake
examples/: CMakeLists.txt  README.md  main.cpp  my_matrix.mtx
include/ligmg/: aggregation.hpp  cc.hpp  cg.hpp  combblas_extra.hpp  compatible_relaxation.hpp  elimination.hpp  levels.hpp  ligmg.hpp  multigrid.hpp  optional.hpp  options.hpp  petsc_shim.hpp  redistribute.hpp  serialize.hpp  smoothing.hpp  util.hpp  write_residuals.hpp
local_bench/: Makefile  graphs.txt  local_bench.bash
scripts/: P_to_S.jl  bench.bash  bench_local.bash  compare_solvers.jl  draw_graph.jl  graph_metrics.jl  hpcprofile.bash  join_csv.bash  perf.bash  profile.bash  run_bench.bash  run_hpcprofile.bash  run_perf.bash  run_profile.bash  run_scalasca_profile.bash  run_simple.bash  ufcollection.jl
src/: OptionParser.cpp  OptionParser.h  bench_spmv.cpp  cc.cpp  compatible_relaxation.jl  cond.cpp  eig-analysis.cpp  ligmg_eigensolve.cpp  main.cpp  parse_options.hpp
util/: Block_distribution.ipynb  blocks.jl  eigvals_to_vec.jl  to_graph.jl
